# robot-experience-memory

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
benchmarks/: benchmark_backends.py  benchmark_recorder.py  large_memory_benchmark.py  recovery_benchmark.py  retrieval_benchmark.py
datasets/industrial/: README.md  cnc_tending.jsonl  pick_and_place.jsonl
docs/: architecture.md  models.md  recorder.md  recovery.md  replay.md  retrieval.md  ros2.md  storage.md
examples/: capture_examples.py  industrial_validation_demo.py  recovery_examples.py  replay_examples.py  retrieval_examples.py  ros2_recording_example.py  ros2_recovery_demo.py  ros2_replay_example.py
launch/: robot_experience_memory_demo.launch.py
src/robot_experience_memory/: __init__.py  identifiers.py  timestamps.py
tests/: test_action_record.py  test_deserialization.py  test_experience_record.py  test_identifiers.py  test_industrial_validation_demo.py  test_metadata.py  test_model_roundtrip.py  test_outcome_record.py  test_package.py  test_public_api.py  test_serialization.py  test_state_snapshot.py  test_timestamps.py  test_validation.py
tests/datasets/: test_cnc_tending_dataset.py  test_pick_and_place_dataset.py
tests/recorder/: test_recorder_basic.py  test_recorder_comprehensive.py  test_recorder_context.py  test_recorder_decorator.py  test_recorder_duration.py  test_recorder_environment.py  test_recorder_exceptions.py  test_recorder_hooks.py  test_recorder_operator.py  test_recorder_tags.py  test_recorder_timestamps.py  test_sensor_references.py
tests/recovery/: test_causal_fallback_selection.py  test_confidence_scoring.py  test_escalation_strategy.py  test_failure_patterns.py  test_fallback_strategy.py  test_outcome_clustering.py  test_recovery_comprehensive.py  test_recovery_engine.py  test_recovery_evaluation.py  test_recovery_evaluation_sequence_metrics.py  test_recovery_policies.py  test_recovery_sequence_scoring.py  test_recovery_suggestions.py  test_recovery_traces.py  test_retry_strategy.py  test_temporal_recovery_chains.py
tests/replay/: test_replay_callbacks.py  test_replay_cli.py  test_replay_comprehensive.py  (+10 more)
(+112 files in other folders)
