[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-experience-memory"
version = "0.1.0"
description = "Stores robot state-action-outcome episodes for replay and recovery."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Aditya" }
]
keywords = ["robotics", "memory", "replay", "recovery"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
