[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-experience-memory"
version = "0.1.0"
description = "Stores robot state-action-outcome episodes for replay and recovery."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Aditya" }
]
keywords = ["robotics", "memory", "replay", "recovery"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/robot_experience_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["robot_experience_memory"]

[project.scripts]
robot-experience-replay = "robot_experience_memory.replay.cli:main"
